--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Simple-inspectors"]
-	path = Simple-inspectors
+	path = submodules/Simple-inspectors
 	url = https://github.com/Cibbi/Simple-inspectors
